--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Protfolio App",
-  "name": "Frank Izquierdo",
+  "name": "Tristan Gardner",
   "icons": [
     {
       "src": "tab-logo.png",
