--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
     "lightbox2": "^2.11.0",
-    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.15.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^3.3.0",
     "react-typed": "^1.1.2",
+    "sass": "^1.85.1",
     "typed.js": "^2.0.10"
   },
   "scripts": {
